# src/modules/admin/admin_routes.ts
@@ -12,10 +12,10 @@ router.put("/profile", authenticator, admin_controller.edit_profile)
 router.put("/change_password", authenticator, admin_controller.change_password)
 router.put("/logout", authenticator, admin_controller.logout)
 router.get("/dashboard", authenticator, admin_controller.dashboard)
-router.get("/graph/user", authenticator, admin_controller.user_graph)
-router.get("/graph/seller", authenticator, admin_controller.seller_graph)
-router.get("/graph/product", authenticator, admin_controller.product_graph)
-router.get("/graph/sales", authenticator, admin_controller.sales_graph)
+router.get("/dashboard/graph/user", authenticator, admin_controller.user_graph)
+router.get("/dashboard/graph/seller", authenticator, admin_controller.seller_graph)
+router.get("/dashboard/graph/product", authenticator, admin_controller.product_graph)
+router.get("/dashboard/graph/sales", authenticator, admin_controller.sales_graph)
 
 // staff_members
 router.post("/staff_members/add", authenticator, admin_controller.add_staff_members)
